ensure no extra space at the end

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,8 @@
   }
   html {
     scroll-behavior: smooth;
-    overflow-y: auto;
+    overflow-y: hidden;
+    
   }
   body {
     overflow-y: auto;
